--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
 <properties>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 </properties>
-
+  <build>
+    <defaultGoal>install</defaultGoal>
+  </build>
 <dependencies>
   <dependency>
     <groupId>junit</groupId>
@@ -28,5 +30,6 @@
     <version>1.1.1</version>
   </dependency>
 </dependencies>
+
 </project>
 
